--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nuxt": "^2.10.2",
     "selfsigned": "^1.10.7",
     "socket.io-client": "^2.3.0",
-    "systeminformation": "^4.14.17"
+    "systeminformation": "^4.14.17",
+    "vue-google-charts": "^0.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
