--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "^5.14.1",
     "feathers-nedb": "^5.1.0",
     "feathers-vuex": "^2.0.5",
+    "ip-cidr": "^2.0.6",
     "nedb": "^1.8.0",
     "nuxt": "^2.10.2",
     "selfsigned": "^1.10.7",
