--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^4.3.11",
+    "@feathersjs/authentication-local": "^4.3.11",
+    "@feathersjs/authentication-oauth": "^4.3.11",
     "@feathersjs/configuration": "^4.3.10",
     "@feathersjs/express": "^4.3.10",
     "@feathersjs/feathers": "^4.3.10",
