--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,35 @@
-cache:
-  untracked: true
-  paths:
-    - node_modules/
+linting:
+   stage: quality
+   script:
+      - npm run lint
+
+test:unit:
+  stage: quality
+  script:
+    -  npm run test:coverage
+  dependencies:
+    - install
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
 
 install:
-  script: "npm install"
+  stage: install
+  script:
+    - npm install
+  artifacts:
+    name: "artifacts"
+    untracked: true
+    expire_in: 30 mins
+    paths:
+      - .npm/
+      - node_modules/
 
-test:
-  script: "npm run test"
+build:
+  stage: build
+  script:
+    - CI=false npm run build
+  artifacts:
+    paths:
+      - build
+    expire_in: 30 mins
+  dependencies:
+    - install
