--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,7 @@ install:
   artifacts:
     name: "artifacts"
     untracked: true
-    expire_in: 30 mins
     paths:
-      - .npm/
       - node_modules/
 
 build:
@@ -36,7 +34,6 @@ build:
   artifacts:
     paths:
       - build
-    expire_in: 30 mins
   dependencies:
     - install
 
@@ -47,3 +44,4 @@ deploy:
   dependencies:
     - linting
     - test
+    - install
