Add port binding

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ deploy:
   script:
     - ls -la
     - docker build -t ocs-server -f
-    - docker run ocs-server
+    - docker run -p 3001:3001 ocs-server
   dependencies:
     - build
     - install
