--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ install:
     - npm install
   artifacts:
     name: "artifacts"
+    expire_in: 1 week
     untracked: true
     paths:
       - node_modules/
@@ -40,6 +41,7 @@ build:
   script:
     - CI=false npm run build
   artifacts:
+    expire_in: 1 week
     paths:
       - dist
   dependencies:
@@ -51,7 +53,7 @@ deploy:
     - deploy
   script:
     - ls -la
-    - docker build -t ocs-server -f
+    - docker build -t ocs-server -f ./DockerFile
     - docker run -p 3001:3001 ocs-server
   dependencies:
     - build
