--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ deploy:
     - deploy
   script:
     - sudo docker build -t ocs-server .
-    - sudo docker run -p 3001:3001 ocs-server npm start
+    - sudo docker run -p 3001:3001 ocs-server -d npm start
   dependencies:
     - build
     - install
