Stop and name container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,9 @@ deploy:
     - mkdir data
     - mv $SSL_CERT ./data/ssl.cert
     - mv $SSL_KEY ./data/ssl.key
+    - sudo docker stop ocs-server
     - sudo docker build -t  ocs-server .
-    - sudo docker run -p 3001:3001 ocs-server -d npm start
+    - sudo docker run -p 3001:3001 -d --name ocs-server ocs-server npm start
   dependencies:
     - build
     - install
