--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ deploy:
     - mv $SSL_KEY ./data/ssl.key
     - sudo docker stop ocs-server
     - sudo docker build -t  ocs-server .
-    - sudo docker run -p 3001:3001 -d --name ocs-server ocs-server npm start
+    - sudo docker run -p 3001:3001 -d --rm --name ocs-server ocs-server npm start
   dependencies:
     - build
     - install
