--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - install
   - build
   - quality
+  - clean
   - deploy
 
 linting:
@@ -49,7 +50,7 @@ build:
     - install
 
 remove_container:
-  stage: deploy
+  stage: clean
   tags:
     - deploy
   script:
@@ -72,4 +73,4 @@ deploy:
     - sudo docker build -t  ocs-server .
     - sudo docker run -p 3001:3001 -d --rm --name ocs-server ocs-server npm start
   dependencies:
-    - remove_container
+    - clean
