Added upload service

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@feathersjs/socketio-client": "^4.3.10",
     "cross-env": "^6.0.3",
     "d3": "^5.14.1",
+    "feathers-blob": "^2.1.0",
     "feathers-nedb": "^5.1.0",
     "feathers-vuex": "^2.0.5",
+    "fs-blob-store": "^5.2.1",
     "ip-cidr": "^2.0.6",
     "nedb": "^1.8.0",
     "nuxt": "^2.10.2",
