--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "feathers-vuex": "^2.0.5",
     "fs-blob-store": "^5.2.1",
     "ip-cidr": "^2.0.6",
+    "multer": "^1.4.2",
     "nedb": "^1.8.0",
     "nuxt": "^2.10.2",
     "selfsigned": "^1.10.7",
