Update and path

--- a/package.json
+++ b/package.json
@@ -13,38 +13,38 @@
     "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "dependencies": {
-    "@feathersjs/authentication": "^4.3.11",
-    "@feathersjs/authentication-local": "^4.3.11",
-    "@feathersjs/authentication-oauth": "^4.3.11",
-    "@feathersjs/configuration": "^4.3.10",
-    "@feathersjs/express": "^4.3.10",
-    "@feathersjs/feathers": "^4.3.10",
-    "@feathersjs/socketio": "^4.3.10",
-    "@feathersjs/socketio-client": "^4.3.10",
+    "@feathersjs/authentication": "^4.4.3",
+    "@feathersjs/authentication-local": "^4.4.3",
+    "@feathersjs/authentication-oauth": "^4.4.3",
+    "@feathersjs/configuration": "^4.4.3",
+    "@feathersjs/express": "^4.4.3",
+    "@feathersjs/feathers": "^4.4.3",
+    "@feathersjs/socketio": "^4.4.3",
+    "@feathersjs/socketio-client": "^4.4.3",
     "cross-env": "^6.0.3",
-    "d3": "^5.14.1",
+    "d3": "^5.14.2",
     "feathers-nedb": "^5.1.0",
-    "feathers-vuex": "^2.0.5",
+    "feathers-vuex": "^2.3.1",
     "ip-cidr": "^2.0.6",
     "multer": "^1.4.2",
     "nedb": "^1.8.0",
     "nuxt": "^2.10.2",
     "selfsigned": "^1.10.7",
     "socket.io-client": "^2.3.0",
-    "systeminformation": "^4.14.17",
+    "systeminformation": "^4.16.0",
     "vue-google-charts": "^0.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4",
-    "@nuxtjs/vuetify": "^1.9.0",
     "@nuxtjs/eslint-config": "^1.1.2",
     "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/vuetify": "^1.9.1",
+    "@vue/test-utils": "^1.0.0-beta.30",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
-    "eslint-plugin-nuxt": ">=0.4.3",
-    "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-nuxt": "^0.5.0",
     "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
     "vue-jest": "^4.0.0-0"
   }
 }
