--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ build:
   artifacts:
     expire_in: 1 week
     paths:
-      - dist
-      - .nuxt
+      - ./client/dist
+      - ./client/.nuxt
   dependencies:
     - install
 
