--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "cross-env NODE_ENV=test jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test-load": "node ./test-load"
   },
   "dependencies": {
     "@feathersjs/authentication": "^4.4.3",
+    "@feathersjs/authentication-client": "^4.4.3",
     "@feathersjs/authentication-local": "^4.4.3",
     "@feathersjs/authentication-oauth": "^4.4.3",
     "@feathersjs/configuration": "^4.4.3",
@@ -41,10 +43,14 @@
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "clui": "^0.3.6",
+    "commander": "^4.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-nuxt": "^0.5.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
-    "vue-jest": "^4.0.0-0"
+    "vue-jest": "^4.0.0-0",
+    "winston": "^3.2.1",
+    "worker-farm": "^1.7.0"
   }
 }
