--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "cross-env NODE_ENV=test jest --verbose",
-    "test-load": "node ./test-load"
+    "simulate": "node ./simulate"
   },
   "dependencies": {
     "@feathersjs/authentication": "^4.4.3",
