--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,14 @@
             }
           }
         ]
+      ],
+      "plugins": [
+        [
+          "@babel/plugin-proposal-class-properties",
+          {
+            "loose": true
+          }
+        ]
       ]
     }
   }
